--- a/app/assets/stylesheets/v2.scss
+++ b/app/assets/stylesheets/v2.scss
@@ -4,10 +4,12 @@ html, body {
   padding: 0;
 }
 
+.container {
+  display: flex;
+}
 
 .main-content {
-  display: flex;
-  height: 100%;
+  height: 80vh;
 
   .wide-2 {
     width: 20%;
